traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: onesta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
            - "--entrypoints.web.address=:80"
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: onesta
spec:
  ports:
    - port: 80
      targetPort: 80
      name: web
    - port: 8080
      targetPort: 8080
      name: admin
  selector:
    app: traefik
